# popper

./: .gitignore  README.md  package-lock.json  package.json
agent/agentic-prism/: README.md  pyproject.toml
agent/agentic-prism/src/prism_crew/: .env  crew.py  main.py
agent/agentic-prism/src/prism_crew/config/: agents.yaml  tasks.yaml
agent/agentic-prism/src/prism_crew/tools/: SerperSearchTool.py
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/markets/: page.tsx
app/markets/[id]/: client.tsx  page.tsx
app/portfolio/: page.tsx
components/about/: prediction-card.tsx
components/layout/: footer.tsx  header.tsx
components/markets/: market-activity.tsx  market-card.tsx  market-chart.tsx  market-filters.tsx  market-grid.tsx  market-resolution-info.tsx  prediction-form.tsx
components/portfolio/: transaction-history.tsx  user-positions.tsx  user-stats.tsx
components/sections/: ai-resolution.tsx  featured-markets.tsx  hero-section.tsx  how-it-works.tsx  stats-section.tsx  trending-markets.tsx
components/ui/: count-up.tsx
components/wallet/: connect-wallet-button.tsx  wallet-info.tsx
contracts/prediction-market/: Cargo.toml
contracts/prediction-market/src/: lib.rs  soroban_token_spec.rs
hooks/: use-market.ts  use-resolution.ts  use-wallet.ts
lib/mocks/: activity-data.ts  chart-data.ts  markets.ts  portfolio-data.ts  positions-data.ts  transactions-data.ts
lib/utils/: date-utils.ts  format-utils.ts
providers/: wallet-provider.tsx
scripts/: deploy.ts  initialize.ts
src/lib/hooks/: use-market.ts  use-markets.ts  (+1 more)
(+11 files in other folders)
